﻿
11/2/2016:
* REFACT: tksubst is not a type alias anymore but a record
* FIX: is_instance_of redesigned and refactored as a member of type ty
* REFACT: monad builders designed reworked
* REFACT: major refactor done
* FIX: D_Type declarations now create a dummy Td_Decl when calling type evaluation and kind inference
* BUG: (|Fx_ForallsQ|) does not handle possible foralls within the internal ty node


10/2/2016:
* REFACT: constraint, types, schemes and flex types instantiation (i.e. variable refreshment) has been widely redesigned
* REFACT: big refactor of monad builders
* UP: more modules ported to the new design
* UP: unification of T_Forall does not unify kinds of the sub-term anymore, as it was done automatically by recursion


9/2/2016: [v0.9.1]
* version bump due to major refactor
* REFACT: flexible types reimplemented as a new datatype and former type "ty" stands now for System-F types
* REFACT: substitution system cleaned up
* REFACT: unquantified types are now detectable via an active pattern
* REFACT: generalization and instantiation redesigned adn cleaned up, both monadic and not
* UP: scoped variables now support kind variables as well


8/2/2016:
* REFACT: better printing of debug information on mgu, subsume and mgu_scheme
* FIX: T_ForallsQ now refreshes quantified variables: it seems that in HML paper that is the expected behaviour
* DEBUG: lots of debugging on HML


6/2/2016:
* NEW: Unit test module written with a simple system for testing type inference
* NEW: most tests have been taked from HML prototype tests
* BUG: discovered a bug in typing "let f = id id", where id : forall 'a. 'a -> 'a


5/2/2016:
* REFACT: let bindings support for annotation has been rewritten
* FIX: rec bindings support for HML has been introduced - need testing
* NEW: let bindings convert flex types to F-types by default, unless a flexible type annotation is provided by the user


4/2/2016: