@@ -136,8 +136,8 @@ module Error =
     let skolemized_type_variable_escaped loc tsk =
         E 24 loc "skolem type variable %O escaped" tsk
 
-    let annot_flex_type loc ϕ =
-        E 25 loc "type expression is a flexible type where a standard (System-F) type is expected: %O" ϕ
+//    let annot_flex_type loc ϕ =
+//        E 25 loc "type expression is a flexible type where a standard (System-F) type is expected: %O" ϕ
 
 
 [< RequireQualifiedAccess >]
@@ -187,6 +187,8 @@ module Warn =
     let unused_quantified_type_variable loc α t =
         W 13 loc Normal "quantified type variable %O does not occur in type %O" α t
 
+    let annot_flex_type_became_Ftype loc ϕ t =
+        W 14 loc Low "type annotation %O is a flexible type and is reduced to a standard (System-F) type: %O" ϕ t
 
 
 [< RequireQualifiedAccess >]
