@@ -5,16 +5,18 @@
 
 namespace Test 
 
+let app f x = f x
+
+(*
 let id x = x
 
 let i = id id
 
-//let f (id : forall 'a. 'a -> 'a) = id id
+let comb (id : forall 'a. 'a -> 'a) = id id
 
-//let app f x = f x
-//let revapp x f = f x
+let revapp x f = f x
 
-//let poly (f : forall 'a. 'a -> 'a) = f 1, f true
-//let a = poly id
-
+let poly (f : forall 'a. 'a -> 'a) = f 1, f true
+let a = poly id
+*)
 
